--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@mui/styled-engine-sc": "^7.3.2",
+    "@mui/x-date-pickers": "^8.12.0",
+    "@mui/x-date-pickers-pro": "^8.12.0",
+    "dayjs": "^1.11.18",
+    "deepmerge": "^4.3.1",
     "formik": "^2.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -23,6 +27,7 @@
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19",
+    "tiny-warning": "^1.0.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
