--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^7.3.2",
     "@mui/x-date-pickers": "^8.12.0",
     "@mui/x-date-pickers-pro": "^8.12.0",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.18",
     "deepmerge": "^4.3.1",
     "formik": "^2.4.6",
